fix(console & mapi): make tasks from other env redirect to right environment
(cherry picked from commit 4741831a885effc34c0d8f038c2821490976d59e)